同步本地框架改动：升级 Java 25 / Boot 3.5，重构 gateway SDK，并增强 starter。